<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Health Inspection Viewer</string>

    <!--  Start Screen  -->
    <string name="start_welcome_sentence">Welcome To</string>

    <!--  Restaurant List Screen  -->
    <string name="resList_title">Surrey Restaurants</string>

    <!--  Restaurant Screen  -->
    <string name="restaurant_title">Restaurant</string>
    <string name="res_icon">restaurant icon</string>
    <string name="res_address">Address :</string>
    <string name="res_GPS_text">GPS coords :</string>
    <string name="res_latitude">Latitude :</string>
    <string name="res_Longitude">Longitude :</string>
    <string name="res_inspection">Inspection :</string>
    <string name="res_inspection_empty">This restaurant has no associated inspection.</string>

    <!--  Inspection Screen  -->
    <string name="inspection_title">Inspection</string>
    <string name="inspection_date">Date :</string>
    <string name="inspection_type">Type :</string>
    <string name="inspection_hazard">Hazard :</string>
    <string name="inspection_violation">All Violations :</string>
    <string name="inspection_violation_empty">This inspection has no associated violation.</string>
    <string name="inspection_issue">issue :</string>
    <string name="inspection_crit"># critical issues :</string>
    <string name="inspection_noncrit"># non-critical issues :</string>

    <!--  Restaurant List View  -->
    <string name="resListView_res_icon">restaurant icon</string>
    <string name="resListView_issue"># of issues :</string>
    <string name="resListView_hazard">Hazard level :</string>
    <string name="resListView_inspection">Recent Inspection :</string>
    <string name="resListView_date">Date :</string>
    <string name="resListView_no_inspection">This restaurant has no inspection report.</string>


    <!--  Inspection List View  -->
    <string name="inspectionListView_hazard">Hazard level :</string>
    <string name="inspectionListView_crit"># critical issues :</string>
    <string name="inspectionListView_noncrit"># non-critical issues :</string>
    <string name="inspectionListView_date">Date :</string>

    <!-- Violation List View  -->
    <string name="violationArrayList_vio_text">Nature of Violation :</string>
    <string name="violationArrayList_issue_text">Issue :</string>


    <!--  sample string for generate UI  -->
    <string name="sample_restaurant_name">Sample Restaurant</string>
    <string name="sample_issue_num">2</string>
    <string name="sample_hazard_lv">Moderate</string>
    <string name="sample_inspection_date">Dec 2020</string>
    <string name="sample_address">12808 King George Blvd</string>
    <string name="sample_lat">49.20611</string>
    <string name="sample_long">-122.867</string>
    <string name="sample_crit_num">0</string>
    <string name="sample_noncrit_num">0</string>
    <string name="sample_inspection_date_full">2019-02-27</string>
    <string name="sample_inspection_type">Follow-Up</string>
    <string name="sample_violation_nature">Sanitization</string>
    <string name="sample_violation_issue">non-critical</string>
    <string name="sample_violation_description" translatable="false">Equipment/facilities/hot ...</string>
    <string name="title_activity_map_screen">MapScreen</string>


    <string name="restaurant_list">Restaurant List</string>
    <string name="restaurant_map">Restaurant Map</string>


    <string name="loading_res_list_text">Loading Restaurant List</string>
    <string name="loading_map_text">Updating The Map</string>
    <string name="loading_res_text">Loading Restaurant Details</string>
    <string name="loading_inspection_text">Loading Inspection</string>

    <!-- Strings used for the data updater class -->
    <string name="dataupdater_contentAvailable">New content available for restaurant resources - would you like to update now?</string>
    <string name="dataUpdater_updateButton">Update Now</string>
    <string name="dataUpdater_ignoreButton">Ignore Update</string>
    <string name="dataupdater_downloadingString">Downloading new data…</string>
    <string name="dataupdater_restartButton">Restart</string>
    <string name="dataUpdater_cancelButton">Cancel</string>
    <string name="dataupdater_restartText">Data successfully updated. Please restart this application to use new data.</string>




    <string name="map_marker_address">Address : </string>
    <string name="map_marker_hazard">Hazard : </string>
    <string name="hazard_high">High</string>
    <string name="hazard_moderate">Moderate</string>
    <string name="hazard_low">Low</string>
    <string name="type_followUp">Follow Up</string>
    <string name="type_none">None</string>
    <string name="type_routine">Routine</string>
    <string name="crit_crit">Critical</string>
    <string name="crit_noncrit">Non Critical</string>
    <string name="date_day_format">days ago</string>
    <string name="vioNature_regulatory">Regulatory</string>
    <string name="vioNature_food">Food</string>
    <string name="vioNature_sanitization">Sanitization</string>
    <string name="vioNature_pests">Pests</string>
    <string name="vioNature_facility">Facility</string>
    <string name="vioNature_employee">Employee</string>
    <string name="vioNature_operator">Operator</string>
    <string name="vioNature_NA" translatable="false">N/A</string>
    <string name="vio_101">Violation #101, Plans/construction/alterations not in…</string>
    <string name="vio_102">Violation #102, Operation of an unapproved food...</string>
    <string name="vio_103">Violation #103, Failure to hold a valid permit while...</string>
    <string name="vio_104">Violation #104, Permit not posted in a conspicuous...</string>
    <string name="vio_201">Violation #201, Food contaminated or unfit for human...</string>
    <string name="vio_202">Violation #202, Food not processed in a manner that...</string>
    <string name="vio_203">Violation #203, Food not cooled in an acceptable manner...</string>
    <string name="vio_204">Violation #204, Food not cooked or reheated in a...</string>
    <string name="vio_205">Violation #205, Cold potentially hazardous food...</string>
    <string name="vio_206">Violation #206, Hot potentially hazardous food...</string>
    <string name="vio_208">Violation #208, Foods obtained from unapproved sources...</string>
    <string name="vio_209">Violation #209, Food not protected from contamination...</string>
    <string name="vio_210">Violation #210, Food not thawed in an acceptable manner...</string>
    <string name="vio_211">Violation #211, Frozen potentially hazardous food...</string>
    <string name="vio_212">Violation #212, Operator has not provided acceptable...</string>
    <string name="vio_301">Violation #301, Equipment/utensils/food contact...</string>
    <string name="vio_302">Violation #302, Equipment/utensils/food contact...</string>
    <string name="vio_303">Violation #303, Equipment/facilities/hot  cold water...</string>
    <string name="vio_305">Violation #305, Conditions observed that may allow...</string>
    <string name="vio_306">Violation #306, Food premises not maintained in a...</string>
    <string name="vio_307">Violation #307, Equipment/utensils/food contact...</string>
    <string name="vio_308">Violation #308, Equipment/utensils/food contact...</string>
    <string name="vio_309">Violation #309, Chemicals cleansers &amp; similar...</string>
    <string name="vio_310">Violation #310, Single use containers &amp; utensils...</string>
    <string name="vio_311">Violation #311, Premises not maintained as...</string>
    <string name="vio_312">Violation #312, Items not required for food premises...</string>
    <string name="vio_313">Violation #313, Live animal on the premises excluding...</string>
    <string name="vio_314">Violation #314, Operator has not provided acceptable...</string>
    <string name="vio_315">Violation #315, Refrigeration units and hot holding...</string>
    <string name="vio_401">Violation #401, Adequate handwashing stations not...</string>
    <string name="vio_402">Violation #402, Employee does not wash hands properly or...</string>
    <string name="vio_403">Violation #403, Employee lacks good personal hygiene...</string>
    <string name="vio_404">Violation #404, Employee smoking in food preparation...</string>
    <string name="vio_501">Violation #501, Operator does not have FOODSAFE...</string>
    <string name="vio_502">Violation #502, In operator’s absence no staff on…</string>
    <string name="vio_304">Violation #304, Premises not free of pests…</string>

    <string name="title_activity_search">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Searching Activity -->
    <string name="search_header">Filter Restaurants</string>
    <string name="search_filterHint">Restaurant Name</string>
    <string name="search_filterHazardLevel">Hazard level of last inspection:</string>
    <string name="search_applyFilters">Apply Filters</string>
    <string name="search_resetFilters">Reset all Filters</string>
    <string name="search_lessThenCheckbox_1">Less than </string>
    <string name="search_greaterThenCheckbox_1">More than </string>
    <string name="search_lessThenCheckbox_2">critical violations in the last year</string>
    <string name="search_favoritesCheckbox">Search only from designated favorites</string>
    <string name="search_high">High</string>
    <string name="search_mod">Moderate</string>
    <string name="search_low">Low</string>
    <string name="search_button">Filter</string>
    <string name="search_invalid_title">Invalid Search</string>
    <string name="search_invalid_content">The settings you have entered are not valid for filtering restaurants!</string>


</resources>
