<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inspectionArrayList_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/inspectionArrayList_ver30_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/inspectionArrayList_ver44_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.44" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/inspectionArrayList_ver80_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />


    <TextView
        android:id="@+id/inspectionArrayList_inspection_hazard"
        android:layout_width="0dp"
        android:layout_height="15dp"
        android:layout_margin="5dp"
        android:maxLines="1"
        android:text="@string/inspectionListView_hazard"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/inspectionArrayList_ver30_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inspectionArrayList_inspection_hazard_lv"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginTop="15dp"
        android:maxLines="1"
        android:text="@string/sample_hazard_lv"
        app:autoSizeTextType="uniform"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/inspectionArrayList_ver30_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inspectionArrayList_inspection_hazard" />

    <View
        android:id="@+id/inspectionArrayList_inspection_hazard_color"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorGreen"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/inspectionArrayList_ver30_guideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inspectionArrayList_inspection_hazard_lv" />

    <TextView
        android:id="@+id/inspectionArrayList_inspection_crit_text"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:maxLines="1"
        android:text="@string/inspectionListView_crit"
        android:textAlignment="textEnd"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/inspectionArrayList_ver80_guideline"
        app:layout_constraintStart_toStartOf="@+id/inspectionArrayList_ver44_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inspectionArrayList_inspection_crit"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:maxLines="1"
        android:text="@string/sample_crit_num"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="@+id/inspectionArrayList_ver80_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inspectionArrayList_inspection_noncrit_text"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_margin="5dp"
        android:maxLines="1"
        android:text="@string/inspectionListView_noncrit"
        app:autoSizeTextType="uniform"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/inspectionArrayList_ver80_guideline"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="@+id/inspectionArrayList_ver44_guideline"
        app:layout_constraintTop_toBottomOf="@+id/inspectionArrayList_inspection_crit_text" />

    <TextView
        android:id="@+id/inspectionArrayList_inspection_noncrit"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_margin="5dp"
        android:maxLines="1"
        android:text="@string/sample_noncrit_num"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="@+id/inspectionArrayList_ver80_guideline"
        app:layout_constraintTop_toBottomOf="@+id/inspectionArrayList_inspection_crit" />

    <TextView
        android:id="@+id/inspectionArrayList_inspection_date_text"
        android:layout_width="0dp"
        android:layout_height="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:maxLines="1"
        android:text="@string/inspectionListView_date"
        app:autoSizeTextType="uniform"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/inspectionArrayList_ver44_guideline"
        app:layout_constraintStart_toStartOf="@+id/inspectionArrayList_ver30_guideline"
        app:layout_constraintTop_toBottomOf="@+id/inspectionArrayList_inspection_noncrit_text" />

    <TextView
        android:id="@+id/inspectionArrayList_inspection_date"
        android:layout_width="0dp"
        android:layout_height="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:maxLines="1"
        android:text="@string/sample_inspection_date_full"
        app:autoSizeTextType="uniform"
        android:textAlignment="textEnd"
        app:layout_constraintStart_toStartOf="@+id/inspectionArrayList_ver44_guideline"
        app:layout_constraintTop_toBottomOf="@+id/inspectionArrayList_inspection_noncrit_text" />


</androidx.constraintlayout.widget.ConstraintLayout>