<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inspection_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".InspectionActivity"
    tools:showIn="@layout/activity_inspection">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/inspection_hor20_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/inspection_hor23_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/inspection_ver60_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/inspection_ver18_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.18" />

    <TextView
        android:id="@+id/inspection_restaurant_name"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:maxLines="1"
        android:text="@string/sample_restaurant_name"
        android:textAlignment="center"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/inspection_ver60_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inspection_date_text"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_margin="15dp"
        android:maxLines="1"
        android:text="@string/inspection_date"
        android:textAlignment="center"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/inspection_ver60_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inspection_date"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_margin="15dp"
        android:layout_marginBottom="10dp"
        android:maxLines="1"
        android:text="@string/sample_inspection_date_full"
        android:textAlignment="center"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/inspection_hor20_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/inspection_ver60_guideline"
        app:layout_constraintTop_toBottomOf="@+id/inspection_date_text" />


    <LinearLayout
        android:id="@+id/inspection_hazard_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/inspection_hor23_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/inspection_hor20_guideline">

        <TextView
            android:id="@+id/inspection_hazard"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_margin="5dp"
            android:maxLines="1"
            android:text="@string/inspection_hazard"
            android:textAlignment="center"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/inspection_hor23_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/inspection_hor20_guideline" />

        <TextView
            android:id="@+id/inspection_hazard_lv"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_margin="5dp"
            android:maxLines="1"
            android:text="@string/sample_hazard_lv"
            app:autoSizeTextType="uniform"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/inspection_hor23_guideline"
            app:layout_constraintStart_toEndOf="@+id/inspection_hazard"
            app:layout_constraintTop_toTopOf="@+id/inspection_hor20_guideline" />

        <View
            android:id="@+id/inspection_hazard_color"
            android:layout_width="20dp"
            android:layout_height="15dp"
            android:layout_margin="5dp"
            android:background="@color/colorGreen"
            android:maxLines="1"
            android:visibility="visible"
            app:autoSizeTextType="uniform"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/inspection_hor23_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/inspection_hazard_lv"
            app:layout_constraintTop_toTopOf="@+id/inspection_hor20_guideline" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/inspection_type_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/inspection_hor20_guideline"
        app:layout_constraintEnd_toStartOf="@+id/inspection_ver60_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inspection_restaurant_name">

        <TextView
            android:id="@+id/inspection_type_text"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:maxLines="1"
            android:text="@string/inspection_type"
            android:textAlignment="center"
            android:textStyle="bold"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/inspection_type"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:maxLines="1"
            android:text="@string/sample_inspection_type"
            android:textAlignment="center"
            android:textStyle="bold"
            app:autoSizeTextType="uniform" />

    </LinearLayout>

    <TextView
        android:id="@+id/inspection_violation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/inspection_violation"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/inspection_ver18_guideline"
        app:layout_constraintTop_toTopOf="@+id/inspection_hor23_guideline" />

    <ListView
        android:id="@+id/inspection_violation_listView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inspection_violation_text" />


</androidx.constraintlayout.widget.ConstraintLayout>